<resources>
    <string name="app_name" translatable="false">HolaMundo</string>
    <string name="icon_exit_description">Exit view</string>
    <string name="instagram_icon_description">Instagram icon</string>
    <string name="edit_text_mail_hint">Phone number, username or email</string>
    <string name="edit_text_password">Password</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="button_log_in">Log in</string>
    <string name="text_or">OR</string>
    <string name="facebook_icon_content_description">Facebook icon</string>
    <string name="text_continue_with_faccebook">Continue as Dave Johnson</string>
    <string name="text_sign_up">Sign Up.</string>
    <string name="text_dont_you_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_title">Choose a user name and password</string>
    <string name="sign_up_description">You can change it later.</string>
    <string name="sign_up_error_message">Usernames can only contain letters, numbers, under scores and dots.</string>
    <string name="sign_up_username_hint">User name</string>
    <string name="sign_up_user_description_hint">Describe yourself in one sentence.</string>
    <string name="sign_up_button">Create account</string>
    <string name="profile_amount">0</string>
    <string name="profile_post_title">Posts</string>
    <string name="profile_followers_title">Followers</string>
    <string name="profile_following">Following</string>
    <string name="profile_description_dummy">This is a description 😊😎</string>
    <string name="profile_edit_btn">Edit profile</string>
    <string name="profile_share_btn">Share profile</string>
    <string name="profile_no_post">You don\'t have any post.</string>
</resources>