<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="UserName" />

    <View
        android:id="@+id/divider_profile_top"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@+id/divider_profile_top"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_user_name_small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
        tools:text="UserName" />

    <TextView
        android:id="@+id/tv_user_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/profile_description_dummy"
        app:layout_constraintEnd_toEndOf="@+id/tv_user_name_small"
        app:layout_constraintStart_toStartOf="@+id/tv_user_name_small"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name_small" />

    <LinearLayout
        android:id="@+id/ll_stats"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintEnd_toEndOf="@+id/tv_user_name"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar">

        <LinearLayout
            android:id="@+id/ll_post"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_post_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_amount"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_post_title"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_followers"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_followers_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_amount"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_followers_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_followers_title"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_following"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_following_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_amount"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_following_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_following"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#CDD4DA"
        android:insetTop="8dp"
        android:insetBottom="8dp"
        android:paddingLeft="42dp"
        android:paddingRight="42dp"
        android:text="@string/profile_edit_btn"
        android:textColor="@color/black"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="@+id/et_user_description"
        app:layout_constraintStart_toStartOf="@+id/tv_user_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_description" />

    <Button
        android:id="@+id/btn_share_proile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:backgroundTint="#CDD4DA"
        android:insetTop="8dp"
        android:insetBottom="8dp"
        android:paddingLeft="42dp"
        android:paddingRight="42dp"
        android:text="@string/profile_share_btn"
        android:textColor="@color/black"
        app:cornerRadius="4dp"
        app:layout_constraintStart_toEndOf="@+id/btn_edit_profile"
        app:layout_constraintTop_toTopOf="@+id/btn_edit_profile" />

    <View
        android:id="@+id/divider_profile_bottom"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_share_proile" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/profile_no_post"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_profile_bottom" />

</androidx.constraintlayout.widget.ConstraintLayout>